--- a/HL_Bioprinter/readme
+++ b/HL_Bioprinter/readme
@@ -1,1 +1,13 @@
-The HaniffaLab bio-printer project is an open-source resource dedicated to creating freely available parametrics models for operational bio-printers. 
+The HaniffaLab bio-printer project is an open-source resource dedicated to creating freely available parametric models for operational bio-printers.
+V1 of the haniffalab Bio-printer utilises the base frame and steppers from any "MP-mini" 3D printer model (1,2,pro). V1 contains custom firmware, additional opensource and low-cost electronics and 3D printed modifications which convert the base pinter into a multi-extruder system.
+
+V1.1 additional purchased hardware:
+Ramps1.4
+RepRap full graphic controller
+HW-134 stepper drivers (1/16 stepped)
+Arduino mega2560
+Pi3B+
+Elegoo 3.5inch SPI touch TFT screen 
+
+V1.1 additonal (non-custom designed) 3D printed hardware:
+graphic controller case: (https://www.thingiverse.com/thing:2813298)
